--- a/.travis.yml
+++ b/.travis.yml
@@ -80,7 +80,7 @@ jobs:
         - ARCH=aarch64
       before_install:
         - sudo apt-get update
-        - sudo apt-get install -y gcc-aarch64-linux-gnu
+        - sudo apt-get install -y gcc-aarch64-linux-gnu libc6-dev-arm64-cross
     - stage: downstream
       before_script:
       script: bash -ex ./.travis-trigger.sh ukontainer/rumprun-packages lkl-musl
