travis: skip deploy if owner is not ukcontainer
Signed-off-by: Akira Moroo <retrage01@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -100,4 +100,4 @@ script:
   - ./build.sh -d /opt/rump -q -k linux notest
   - travis_fold end "build.sh"
   - RUMPDIR=/opt/rump RUMPOBJ=`pwd`/rumpobj make -C tests run
-  - bash -e ./.travis-deploy.sh $DEPLOY
+  - if [ $TRAVIS_REPO_SLUG == "ukontainer/frankenlibc" ] ; then bash -e ./.travis-deploy.sh $DEPLOY ; fi
