--- a/.travis.yml
+++ b/.travis.yml
@@ -95,4 +95,4 @@ script:
   - for file in `find patches/$TRAVIS_OS_NAME/ -maxdepth 1 -type f` ; do patch -p1 < $file ; done
   - ./build.sh -d /opt/rump -q -k linux notest
   - if [ $CC != "arm-linux-gnueabihf-gcc" ] && [ $CC != "aarch64-linux-gnu-gcc" ] ; then RUMPDIR=/opt/rump RUMPOBJ=`pwd`/rumpobj make -C tests run ; fi
-  - bash -ex ./.travis-deploy.sh $DEPLOY
+  - if [ $TRAVIS_REPO_SLUG == "ukontainer/frankenlibc" ] ; then bash -ex ./.travis-deploy.sh $DEPLOY ; fi
