only call downstream builds when lkl-musl-macho branch
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -74,6 +74,7 @@ jobs:
       before_script:
       script: bash -ex ./.travis-trigger.sh ukontainer/rumprun-packages lkl-musl
       os: linux
+      if: branch = lkl-musl-macho
 
 before_script:
   - travis_wait 30 git submodule update --init llvm
