fix freezing issue during arm64 CI
The support forum said there is an issue on handling filtered secrets
logic on arm64 thus added a workaround for this.

https://travis-ci.community/t/arm64-required-filter-secrets-false/5403/2

Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,7 @@ jobs:
       dist: xenial
       sudo: required
       compiler: arm-linux-gnueabihf-gcc
+      filter_secrets: false # https://travis-ci.community/t/arm64-required-filter-secrets-false/5403/2
       env:
         - ARCH=arm
       before_install:
