--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ jobs:
         - ARCH=arm
       before_install:
         - sudo apt-get update
-        - sudo apt-get install -y gcc-5-arm-linux-gnueabihf bc
+        - sudo apt-get install -y gcc-5-arm-linux-gnueabihf
         - sudo ln -s `which ccache` /usr/lib/ccache/arm-linux-gnueabihf-gcc-5
     - stage: downstream
       before_script:
