--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,12 @@ jobs:
     - stage: test
       os: linux
       dist: xenial
-      sudo: required
       compiler: clang
       env:
         - ARCH=amd64
     - stage: test
       os: linux
       dist: xenial
-      sudo: required
       compiler: gcc
       env:
         - ARCH=amd64
@@ -63,25 +61,23 @@ jobs:
       arch: arm64
       os: linux
       dist: xenial
-      sudo: required
       compiler: arm-linux-gnueabihf-gcc
       filter_secrets: false # https://travis-ci.community/t/arm64-required-filter-secrets-false/5403/2
       env:
         - ARCH=arm
       before_install:
         - sudo dpkg --add-architecture armhf
-        - sudo apt-get update
+        - sudo apt-get update || true
         - sudo apt-get install libc6:armhf crossbuild-essential-armhf bc
     - stage: test
       arch: arm64
       os: linux
       dist: xenial
-      sudo: required
       compiler: gcc
       env:
         - ARCH=arm64
       before_install:
-        - sudo apt-get update
+        - sudo apt-get update || true
         - sudo apt-get install bc
     - stage: downstream
       before_script:
