--- a/.travis.yml
+++ b/.travis.yml
@@ -69,8 +69,8 @@ jobs:
         - mkdir ~/junit
         - export PATH=/usr/local/opt/ccache/libexec:$HOME/.local/bin:$PATH
         - HOMEBREW_NO_AUTO_UPDATE=1 brew install gnu-sed ccache e2fsprogs
-        - HOMEBREW_NO_AUTO_UPDATE=1 brew install binutils
-        - pip install --user yamlish junit_xml
+        - HOMEBREW_NO_AUTO_UPDATE=1 brew install binutils python
+        - pip3 install --user yamlish junit_xml
         - ln -sf /usr/local/bin/gsed ~/.local/bin/sed
         - ln -sf /usr/local/bin/gdate ~/.local/bin/date
         - ln -sf /usr/local/opt/e2fsprogs/sbin/mkfs.ext4 ~/.local/bin/
